# small_test_projects

./: README.md
CallbacksCompare/: CMakeLists.txt  c11callback.cpp  c11callback.h  event_handler_abstract.h  event_handler_impl.cpp  event_handler_impl.h  java_style_callback.cpp  java_style_callback.h  main  main.cpp  time_utils.h
Division/: divide.cpp
copy_constuct_madness/: main  main.cpp
copying/test/: pick_every_n.sh
include_madness/bad_lib/: CMakeLists.txt  include_bad.cpp  include_bad.h
include_madness/main_part/: CMakeLists.txt  include_good.h  lib_good.cpp  lib_good.h  main.cpp
joystick/: Makefile  capture0.tga  main.cc
joystick/src/: joystick.cc  joystick.h
unsigned_madness/: main  main.cpp
